Bug 999496 - Move AudioData::SizeOfIncludingThis to MediaData.cpp.  r=kinetik